# clockify-etl

./: .gitignore  .secrets.example.toml  Makefile  README.md  logging.ini  luigi.toml  pyproject.toml  settings.toml
src/: clockify.py  config.py  main.py  tasks.py  utils.py
src/tasks/: dataframes.py  plots.py  wrappers.py
